--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -23,7 +23,6 @@ pipeline {
                  sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
              }
          }
-         //{
 
          
          stage('Unit test') { 
@@ -36,8 +35,8 @@ pipeline {
              steps {
                   // sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
                     //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
-                    // sh 'C:\Users\sapir\.android\avd\Pixel_API_25.avd'
+                     sh 'C:\Users\sapir\.android\avd\Pixel_API_25.avd'
                     }
-}
+                }
      }
 }
