--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -44,7 +44,7 @@ pipeline {
            //  steps {
                   // sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
                     //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
-                     run 'C:\Users\sapir\.android\avd\Pixel_API_25.avd'
+               //      run 'C:\Users\sapir\.android\avd\Pixel_API_25.avd'
              //       }
               //  }
               
