--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -56,7 +56,7 @@ pipeline {
                 // -- Set the Directory of the files in the workspace
                 JOB_FILES_DIRECTORY = "${env.JOB_DIRECTORY}"+"/src/test/resources/files"
                 // -- Set the suite name and route parameter
-                SUITE_PATH = "src/test/resources/suites/"+"${JOB_APPIUM_SUITE}"+".xml" 
+                //SUITE_PATH = "src/test/resources/suites/"+"${JOB_APPIUM_SUITE}"+".xml" 
 
                 // -- Initial Configuration Only If the Platform is Android.
                 if (JOB_PLATFORM_NAME == "android"){
