--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -32,85 +32,21 @@ pipeline {
                  sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
              }
          }
-                    stage("Initial Configuration") {
-        steps {
-
-            script {
-                // -- Set the Directory of the files in the workspace
-                JOB_FILES_DIRECTORY = "${env.JOB_DIRECTORY}"+"/src/test/resources/files"
-                // -- Set the suite name and route parameter
-                //SUITE_PATH = "src/test/resources/suites/"+"${JOB_APPIUM_SUITE}"+".xml" 
-
-                // -- Initial Configuration Only If the Platform is Android.
-                    // -- Set the Platform Tool Directory. 
-                 PLATFORM_TOOL_DIRECTORY = "${env.ANDROID_HOME}"+"/platform-tools/"
-                    // -- Set the Emulator Directory.
-                 EMULATOR_DIRECTORY = "${env.ANDROID_HOME}"+"/emulator/"
-                
-            }
-
-            // -- Clean Workspace
-            echo "Clean Workspace"
-            cleanWs()
-        }
-    }
-              
-              
-        stage("Execute ADB Server") {
-        steps {
-            echo "Executing ADB Server"
-            // -- First, you need to go to the Platform Tool Directory.
-            // -- Then run the ADB Server
-            script {
-                try {
-                    sh """
-                        cd ${PLATFORM_TOOL_DIRECTORY}
-                        ./adb start-server&
-                    """
-                } catch (err) { 
-                    echo "The ADB Server is not running"                                          
-                }
-            }  
-        }
-    }
-
-    // Parameters needed: JOB_PLATFORM_NAME, EMULATOR_DIRECTORY, JOB_EMULATOR_VERSION
-    // --------------------------------
-    // -- STAGE: Launch Android Emulador
-    // --------------------------------
-    stage("Launch Android Emulador") {
-        steps {
-            echo "Starting Emulador"
-                // -- First, you need to go to the Emulator Directory.
-                // -- Then launch the Emulator
-            script {
-                try {
-                    sh """
-                        cd ${EMULATOR_DIRECTORY}
-                        ./emulator -avd ${JOB_DEVICE_NAME} -engine auto -wipe-data -no-cache -memory 3072 -no-snapshot-save&
-                        sleep 60s
-                    """
-                } catch (err) { 
-                    echo "The emulator is not open"                                          
-                }
-            }      
-        }
-    }
-
-         
          stage('Unit test') { 
              steps {
                  sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
              
               }
         }
-         //stage('Start Emulator') { 
-           //  steps {
+         stage('Start Emulator') { 
+             steps {
                   // sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
                     //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
                //      run 'C:\Users\sapir\.android\avd\Pixel_API_25.avd'
-             //       }
-              //  }
+               sh 'C:\Users\sapir\AppData\Local\Android\Sdk\emulator\emulator.exe -avd Nexus_5X_API_25'
+
+                   }
+               }
               
               
      }
