--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -38,7 +38,8 @@ pipeline {
                   // sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
                     //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
                //      run 'C:\Users\sapir\.android\avd\Pixel_API_25.avd'
-               sh '/ShelterApp/emulator Nexus_5X_API_24'
+              // sh '/ShelterApp/emulator Nexus_5X_API_24'
+                 sh 'sudo apt-get install android-sdk'
 
                    }
                }
