--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -39,7 +39,7 @@ pipeline {
                     //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
                //      run 'C:\Users\sapir\.android\avd\Pixel_API_25.avd'
               // sh '/ShelterApp/emulator Nexus_5X_API_24'
-                 sh 'sudo apt-get install android-sdk'
+                 sudo apt-get install android-sdk
 
                    }
                }
