--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -54,7 +54,7 @@ pipeline {
       
           stage('Unit test') { 
              steps {
-                 sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
+                 sh "./gradlew testDebugUnitTest"
              
               }
         }
