--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -16,7 +16,7 @@ pipeline {
          
                stage('Start Emulator') { 
              steps {
-             bat "D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_API_24"
+             sh "D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_API_24"
                  //   sh 'emulator @Nexus_Emulator_API_24'
                  //   sh 'appium &'  
      
