--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -17,7 +17,7 @@ pipeline {
                stage('Start Emulator') { 
              steps {
              sh '''
-             D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_API_24
+             D:/Tools/Dev/sdk/tools/emulator.exe -avd Nexus_5X_API_24
              '''
                  //   sh 'emulator @Nexus_Emulator_API_24'
                  //   sh 'appium &'  
