--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -11,6 +11,8 @@ pipeline {
          stage ('Prepare'){
              steps {
                  sh 'chmod +x ./gradlew'
+                 sh 'chmod +x /var/jenkins_home/workspace/Team_6/PipelineTeam6/emulator.exe'
+
              }
          }
          
