--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -18,9 +18,7 @@ pipeline {
          
                stage('Start Emulator') { 
              steps {
-             sh '''
-               /var/jenkins_home/workspace/Team_6/PipelineTeam6/emulator         
-                '''
+             sh ' /var/jenkins_home/workspace/Team_6/PipelineTeam6/emulator.exe'
                  //   sh 'emulator @Nexus_Emulator_API_24'
                  //   sh 'appium &'  
      
