--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -1,76 +1,37 @@
-
-
-
-pipeline {
-    agent{
-        docker {
-            image 'windsekirun/jenkins-android-docker:1.1.1'
-        }
-     }
-     options {
-         skipStagesAfterUnstable()
-     }
-     stages {
-         stage ('Prepare'){
-             steps {
-                 sh 'chmod +x ./gradlew'
-
-             }
-         }
-         
-               stage('Start Emulator') { 
-             steps {
-             bat 'C:\\Users\\sapir\\AppData\\Local\\Android\\Sdk\\emulator\\emulator.exe -avd PIXEL_API_25'
-                   }
-               }
-         
-         
-         stage('Compile') {
-              steps {
-                  sh './gradlew compileDebugSources'
-              }
-         }
-         
-         
-           stage('Lint and Unit Test'){
-      parallel {
-        stage('lint'){
-          steps{
-            script {
-              try {
-                sh './gradlew lint'
-              } catch (Exception e) {
-                echo e.getMessage()
-                echo "Lint failed"
-              }
-            }       
-          }
-        }
-        stage('test'){
-          steps{
-            script {
-              try {
-                sh './gradlew test'
-              } catch (Exception e) {
-                echo e.getMessage()
-                echo "test failed"
-              }
-            }       
-          }   
-        }
-      }
+pipeline { 
+  agent { 
+    docker { 
+      image 'windsekirun/jenkins-android-docker:1.1.1' 
+    } 
+  } 
+  options { 
+    // Stop the build early in case of compile or test failures 
+    skipStagesAfterUnstable() 
+  } 
+  stages { 
+    stage ('Prepare'){ 
+      steps { 
+        sh 'chmod +x ./gradlew' 
+      } 
+    } 
+    stage('Compile') { 
+      steps { 
+        // Compile the app and its dependencies 
+        sh './gradlew compileDebugSources' 
+      } 
+    } 
+    stage('Build APK') { 
+      steps { 
+        // Finish building and packaging the APK 
+        sh './gradlew assembleDebug' 
+      } 
     }
-    stage('createAPK'){
-      steps{
-        sh './gradlew assembleRelease'  
-      }
-    }
+     stage('UnitTests') {
+      //Start all the existing tests in the test package 
+          steps { 
+            sh './gradlew testDebugUnitTest testDebugUnitTest'
+
+      }         
   }
-         
-         
-   
-      
-              
-              
-     }
-
+  } 
+}
