--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -26,7 +26,7 @@ pipeline {
     stage('Unit test') { 
       steps {
       
-      sh "./gradlew testDebugUnitTest runAVD -Pavd"
+      sh "./gradlew testDebugUnitTest runAVD -Pavd=Nexus_4_0_emulator"
       }
     }
   }
