--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -25,7 +25,7 @@ pipeline {
     }
     stage('Unit test') { 
       steps {
-          emulator -avd Android28
+          emulator -avd @Android28
           sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
       }
     }
