--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -25,6 +25,15 @@ pipeline {
     }
     stage('Unit test') { 
       steps {
+      ANDROID_SERIAL=emulator-5556
+
+# wait for emulator to be up and fully booted, unlock screen
+
+$ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done; input keyevent 82'
+
+sh './gradlew connectedAndroidTest'
+      
+      
           sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
       }
     }
