--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeleteSirenActivity"></activity>
+        <activity android:name=".CivilianShetlerActivity" android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".DeleteSirenActivity" />
         <activity android:name=".AddSirenActivity" />
         <activity android:name=".DeleteShelterActivity" />
         <activity android:name=".AddShelterActivity" />
