--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -37,4 +37,35 @@ sh './gradlew connectedAndroidTest'
       }
     }
   }
+  post {
+        success {
+            echo 'BUILD SUCCESSFUL - NO EMAIL WILL BE SENT'
+        }
+
+        failure { //Send an email to all teammates about broken build
+            emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS',
+                    body: '$DEFAULT_CONTENT',
+                    replyTo: 'edenda2@ac.sce.ac.il',
+                    to: 'edenda2@ac.sce.ac.il'
+            )
+
+            emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS',
+                    body: '$DEFAULT_CONTENT',
+                    replyTo: 'sapirsa3@ac.sce.ac.il',
+                    to: 'sapirsa3@ac.sce.ac.il')
+
+            emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS',
+                    body: '$DEFAULT_CONTENT',
+                    replyTo: 'yaelbu11@ac.sce.ac.il',
+                    to: 'yaelbu11@ac.sce.ac.il')
+
+            emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS',
+                    body: '$DEFAULT_CONTENT',
+                    replyTo: 'karindu@ac.sce.ac.il',
+                    to: 'karindu@ac.sce.ac.il')
+
+
+        }
+
+    }
 }
