--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -20,20 +20,13 @@ pipeline {
     }
     stage('Build APK') {
       steps {
-        sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
+        sh "./gradlew assembleDebug assembleAndroidTest"
       }
     }
     stage('Unit test') { 
       steps {
-      //ANDROID_SERIAL=emulator-5556
+              sh './gradlew testDebugUnitTest testDebugUnitTest'
 
-
-      // "$ANDROID_HOME/platform-tools/adb wait-for-device shell"
-
-sh './gradlew connectedAndroidTest'
-      
-      
-          sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
       }
     }
   }
