--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EmployeeSirensActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".DeleteEmergencyActivity"></activity>
+        <activity android:name=".AddEmergencyActivity" />
+        <activity android:name=".EmergencyMenuActivity" />
+        <activity android:name=".ViewAdminNumActivity" />
+        <activity
+            android:name=".EmployeeSirensActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".CivilianShetlerActivity"
             android:windowSoftInputMode="adjustPan" />
@@ -30,7 +35,8 @@
         <activity android:name=".RequestsActivity" />
         <activity android:name=".RateActivity" />
         <activity android:name=".ContactUsActivity" />
-        <activity android:name=".NumbersActivity"
+        <activity
+            android:name=".NumbersActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".AdminSirensActivity" />
         <activity android:name=".AdminSheltersActivity" />
