--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -15,6 +15,7 @@ pipeline {
     }
     stage('Compile') {
       steps {
+      //here error
         sh './gradlew compileDebugSources'
       }
     }
