--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -21,7 +21,7 @@ pipeline {
     }
     stage('Unit test') { 
       steps {
-          sh './gradlew test'
+           sh './gradlew testDebugUnitTest testDebugUnitTest'
 
       }
     }
