--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     androidTestImplementation 'androidx.test:rules:1.3.0-alpha05'
 }
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
 apply plugin: 'com.google.gms.google-services'
