--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    testOptions {
+        unitTests.all {
+            unitTests()
+        }
+    }
+}
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
 }
 
 dependencies {
@@ -38,11 +49,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     androidTestImplementation 'androidx.test:rules:1.3.0-alpha05'
 }
-tasks.withType(Test) {
-    testLogging {
-        exceptionFormat "full"
-        events "started", "skipped", "passed", "failed"
-        showStandardStreams true
-    }
-}
+
 apply plugin: 'com.google.gms.google-services'
