--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         }
     }
 }
-test {
+tasks.withType(Test) {
     testLogging {
         exceptionFormat "full"
  //       events "started", "skipped", "passed", "failed"
