--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
 tasks.withType(Test) {
     testLogging {
         exceptionFormat "full"
- //       events "started", "skipped", "passed", "failed"
-    //    showStandardStreams true
+        events "started", "skipped", "passed", "failed"
+       showStandardStreams true
     }
 }
 
