--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -13,6 +13,12 @@ pipeline {
         sh 'chmod +x ./gradlew'
       }
     }
+    stage('Checkstyle') {
+    steps {
+        sh 'vendor/bin/phpcs --report=checkstyle --report-file=`pwd`/build/logs/checkstyle.xml --standard=PSR2 --extensions=php --ignore=autoload.php --ignore=vendor/ . || exit 0'
+        checkstyle pattern: 'build/logs/checkstyle.xml'
+    }
+}
     stage('Compile') {
       steps {
       //here error
