--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -15,7 +15,7 @@ pipeline {
     }
     stage('Checkstyle') {
     steps {
-        sh 'vendor/bin/phpcs --report=checkstyle --report-file=`pwd`/build/logs/checkstyle.xml --standard=PSR2 --extensions=php --ignore=autoload.php --ignore=vendor/ . || exit 0'
+        sh ' --report=checkstyle --report-file=`pwd`/build/logs/checkstyle.xml --standard=PSR2 --extensions=php --ignore=autoload.php --ignore=vendor/ . || exit 0'
         checkstyle pattern: 'build/logs/checkstyle.xml'
     }
 }
