--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -13,10 +13,14 @@ pipeline {
         sh 'chmod +x ./gradlew'
       }
     }
-    stage('Checkstyle') {
+    stage('Static code analysis') {
     steps {
-        sh 'vendor/bin/phpmd --report=checkstyle --report-file=`pwd`/build/logs/checkstyle.xml --standard=PSR2 --extensions=php --ignore=autoload.php --ignore=vendor/ . || exit 0'
-        checkstyle pattern: 'build/logs/checkstyle.xml'
+        sh './gradlew checkstyleMain'
+        publishHTML (target: [
+            reportDir: 'build/report/checkstyle/',
+            reportFiles: 'main.html',
+            reportName:"checkstyle report'])
+           
     }
 }
     stage('Compile') {
