--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -20,6 +20,23 @@ pipeline {
       }
     }
 
+
+  stage('static code'){
+      steps{
+          sh './gradlew checkstyleMain'   
+           publishHTML (target:  [
+              reportDir: 'build/reports/checkstyle/',
+              reportFiles: 'main.html',
+              reportNmame:"checkstyle report"]}
+           
+      
+  
+  }
+  
+  }
+
+
+
     stage('Unit test') { 
       steps {
            sh './gradlew testDebugUnitTest '
