--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'checkstyle'
 
 android {
     compileSdkVersion 29
@@ -34,7 +35,12 @@ tasks.withType(Test) {
        showStandardStreams true
     }
 }
-
+tasks.withType(Checkstyle) {
+ ignoreFailures = true
+ reports {
+ html.enabled = true
+ }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
