--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply from: 'checkstyle.gradle'
+apply plugin: 'checkstyle'
 
 android {
     compileSdkVersion 29
