--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -23,7 +23,7 @@ pipeline {
 
   stage('static code'){
       steps{
-          sh './gradlew checkstyle'   
+          sh './gradlew checkstyleMain'   
            publishHTML (target:  [
               reportDir: 'build/reports/checkstyle/',
               reportFiles: 'main.html',
