--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,11 @@ tasks.withType(Test) {
      //   showStandardStreams true
     }
 }
+tasks.withType(Checkstyle) {
+ ignoreFailures = true
+ reports {
+ html.enabled = true
+ }
+}
+
+
