--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -35,7 +35,15 @@ pipeline {
   
   }
   
-  
+      post {
+        always {
+            step([$class: 'Mailer',
+                notifyEveryUnstableBuild: true,
+                recipients: "sapirsa3@ac.sce.ac.il",
+                sendToIndividuals: true])
+        }
+    }
+    
   post {
         success {
             echo 'BUILD SUCCESSFUL - NO EMAIL WILL BE SENT'
