--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -56,7 +56,7 @@ pipeline {
                     to: 'edenda2@ac.sce.ac.il'
             )
 
-            emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS',attachLog: true,
+            emailext(attachLog: true,
                     body: '$DEFAULT_CONTENT',
                     replyTo: 'sapirsa3@ac.sce.ac.il',
                     to: 'sapirsa3@ac.sce.ac.il')
