--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -55,9 +55,10 @@ pipeline {
                     replyTo: 'edenda2@ac.sce.ac.il',
                     to: 'edenda2@ac.sce.ac.il'
             )
+emailext attachmentsPattern: '**/report.html', body: 'Find attachments', subject: 'test', to: 'sapirsa3@ac.sce.ac.il'
 
             emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS', 
-                    body: '$DEFAULT_CONTENT', attachLog: true,
+                    body: '$DEFAULT_CONTENT', 
                     replyTo: 'sapirsa3@ac.sce.ac.il',
                     to: 'sapirsa3@ac.sce.ac.il')
 
