--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -38,7 +38,7 @@ pipeline {
     
   post {
         always{
-                archiveArtifacts artifacts: 'build.log', onlyIfSuccessful: true     
+                archiveArtifacts artifacts: '**/build.log', onlyIfSuccessful: true     
                 emailext attachLog: true, attachmentsPattern: 'build.log',
                 body: "${currentBuild.currentResult}: Job ${env.JOB_NAME} build ${env.BUILD_NUMBER}\n More info at: ${env.BUILD_URL}",
                 recipientProviders: [developers(), requestor()],
