--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -58,7 +58,7 @@ pipeline {
                     to: 'edenda2@ac.sce.ac.il'
             )
             emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS', 
-                    body: '${https://medium.com/@gustavo.guss/jenkins-send-email-with-attachment-cec1e052583a}', 
+                    body: 'https://medium.com/@gustavo.guss/jenkins-send-email-with-attachment-cec1e052583a', 
                     replyTo: 'sapirsa3@ac.sce.ac.il',
                     to: 'sapirsa3@ac.sce.ac.il')
 
